# cmake_test_lib

./: .gitignore  CMakeLists.txt  README.md
include/: FileA.cpp  FileA.h  FileB.cpp  FileB.h  FileC.cpp  FileC.h
include/LibA/: FileA.h  FileB.h  FileC.h
src/: FileA.cpp  FileB.cpp  FileC.cpp
